baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__02_parser__enum.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  ENUM_DEF
    KW_ENUM "enum"
    WORD "GroupF"
    L_BRACE "{"
    ENUM_VARIANT
      WORD "F1"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "f1_alias"
            QUOTE """
            WORD "f1_alias"
            QUOTE """
          R_PAREN ")"
    ENUM_VARIANT
      WORD "F2"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "f2 desc"
            QUOTE """
            WORD "f2"
            WORD "desc"
            QUOTE """
          R_PAREN ")"
    ENUM_VARIANT
      WORD "F3"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "f3_alias"
            QUOTE """
            WORD "f3_alias"
            QUOTE """
          R_PAREN ")"
      ATTRIBUTE
        AT "@"
        WORD "description"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "f3 desc"
            QUOTE """
            WORD "f3"
            WORD "desc"
            QUOTE """
          R_PAREN ")"
    ENUM_VARIANT
      WORD "F4"
      ATTRIBUTE "@stream.done"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "done"
    ENUM_VARIANT
      WORD "F5"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "f5_alias"
            QUOTE """
            WORD "f5_alias"
            QUOTE """
          R_PAREN ")"
      ATTRIBUTE "@stream.done"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "done"
    ENUM_VARIANT
      WORD "F6"
      ATTRIBUTE "@skip"
        AT "@"
        WORD "skip"
    R_BRACE "}"

=== ERRORS ===
None
