baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__02_parser__non_field.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "EFoo"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "EA"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "EB"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "EC"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "E1"
    EQUALS "="
    TYPE_EXPR
      WORD "EFoo"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "e1_alias"
            QUOTE """
            WORD "e1_alias"
            QUOTE """
          R_PAREN ")"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "E2"
    EQUALS "="
    TYPE_EXPR
      WORD "EFoo"
      ATTRIBUTE "@stream.done"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "done"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "E3"
    EQUALS "="
    TYPE_EXPR
      WORD "EFoo"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "e3_alias"
            QUOTE """
            WORD "e3_alias"
            QUOTE """
          R_PAREN ")"
      ATTRIBUTE "@stream.done"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "done"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "E4"
    EQUALS "="
    TYPE_EXPR
      WORD "EA"
      PIPE "|"
      WORD "EB"
      PIPE "|"
      WORD "EC"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "e4_alias"
            QUOTE """
            WORD "e4_alias"
            QUOTE """
          R_PAREN ")"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "E5"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR
          WORD "EFoo"
          ATTRIBUTE
            AT "@"
            WORD "alias"
            ATTRIBUTE_ARGS
              L_PAREN "("
              STRING_LITERAL "e5_alias"
                QUOTE """
                WORD "e5_alias"
                QUOTE """
              R_PAREN ")"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        STRING_LITERAL "hello"
          QUOTE """
          WORD "hello"
          QUOTE """
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "E6"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR
          WORD "EFoo"
          ATTRIBUTE "@stream.done"
            AT "@"
            WORD "stream"
            DOT "."
            WORD "done"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        STRING_LITERAL "hello"
          QUOTE """
          WORD "hello"
          QUOTE """
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "E7"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "EFoo"
      ATTRIBUTE
        AT "@"
        WORD "alias"
        ATTRIBUTE_ARGS
          L_PAREN "("
          STRING_LITERAL "e7_alias"
            QUOTE """
            WORD "e7_alias"
            QUOTE """
          R_PAREN ")"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "EFoo"
          L_BRACE "{"
          OBJECT_FIELD "x: 1"
            WORD "x"
            COLON ":"
            INTEGER_LITERAL "1"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "E8"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "EFoo"
      ATTRIBUTE "@stream.done"
        AT "@"
        WORD "stream"
        DOT "."
        WORD "done"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "EFoo"
          L_BRACE "{"
          OBJECT_FIELD "x: 1"
            WORD "x"
            COLON ":"
            INTEGER_LITERAL "1"
          R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
