baml_language/crates/baml_tests/snapshots/diagnostic_errors/attr_disambiguation/baml_tests__diagnostic_errors__attr_disambiguation__02_parser__ordering.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Fizz"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "OrderingSimple"
    L_BRACE "{"
    FIELD
      WORD "a1"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
    FIELD
      WORD "a2"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a2_alias"
              QUOTE """
              WORD "a2_alias"
              QUOTE """
            R_PAREN ")"
    FIELD
      WORD "a3"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a3_alias"
              QUOTE """
              WORD "a3_alias"
              QUOTE """
            R_PAREN ")"
    FIELD
      WORD "a4"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a4_alias"
              QUOTE """
              WORD "a4_alias"
              QUOTE """
            R_PAREN ")"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
    FIELD
      WORD "a5"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a5_alias"
              QUOTE """
              WORD "a5_alias"
              QUOTE """
            R_PAREN ")"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
        ATTRIBUTE
          AT "@"
          WORD "description"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a5 desc"
              QUOTE """
              WORD "a5"
              WORD "desc"
              QUOTE """
            R_PAREN ")"
    FIELD
      WORD "a6"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a6_alias"
              QUOTE """
              WORD "a6_alias"
              QUOTE """
            R_PAREN ")"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    FIELD
      WORD "a7"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    FIELD
      WORD "a8"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a8_alias"
              QUOTE """
              WORD "a8_alias"
              QUOTE """
            R_PAREN ")"
        ATTRIBUTE
          AT "@"
          WORD "description"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a8 desc"
              QUOTE """
              WORD "a8"
              WORD "desc"
              QUOTE """
            R_PAREN ")"
    FIELD
      WORD "a9"
      TYPE_EXPR
        WORD "Fizz"
        ATTRIBUTE
          AT "@"
          WORD "alias"
          ATTRIBUTE_ARGS
            L_PAREN "("
            STRING_LITERAL "a9_alias"
              QUOTE """
              WORD "a9_alias"
              QUOTE """
            R_PAREN ")"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    R_BRACE "}"

=== ERRORS ===
None
